<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">

    <item
        android:id="@+id/sort_by_average_rate"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/sort_by_average_rate" />

    <item
        android:id="@+id/sort_by_popularity"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/sort_by_popularity" />

    <item
        android:id="@+id/sort_by_favorites"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/sort_by_favorites" />

</menu>