<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project1movies.android.com.project1movies.activities.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/movies_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/some_error_occurred_check_your_internet_connection"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="103dp"
        android:layout_height="59dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:onClick="OnClickRetryButton"
        android:text="@string/retry"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/movies_recycler"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/movies_recycler"
        app:layout_constraintTop_toBottomOf="@+id/error_message" />

    <ProgressBar
        android:id="@+id/loading_bar"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="62dp"
        android:layout_height="77dp"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/movies_recycler"
        app:layout_constraintEnd_toEndOf="@+id/movies_recycler"
        app:layout_constraintStart_toStartOf="@+id/movies_recycler"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:text="@string/empty"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
